--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet"type="text/css"href="style.css"  />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -14,13 +15,13 @@
 <body>
 
     <header class="jumbotron">
-        <div>
-            <div>
-                <div>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-sm-6">
                     <h1>Intelicial AI</h1>
                     <p>Our work to create safe and beneficial AI requires a deep understanding of the potential risks and benefits, as well as careful consideration of the impact.</p>
                 </div>
-                <div>
+                <div class="col-12 col-sm">
                 </div>
             </div>
         </div>
@@ -31,8 +32,8 @@
         </div>
     </div>
      
-    <div>
-        <div>
+    <div class="col-12 col-sm-4 col-md-3">
+        <div class="col col-sm col-md">
             <div>
                 <h3>Our Advanced AI Implementations</h3>
             </div>
@@ -66,8 +67,8 @@
     </div>
 
     <footer>
-        <div>
-            <div>             
+        <div class="container">
+            <div class="row">             
                 <div>
                     <h5>Links</h5>
                     <ul>
