--- a/aboutus.html
+++ b/aboutus.html
@@ -29,6 +29,10 @@
 
 
     <div class="container">
+        <ol class="col-12 breadcrumb">
+            <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+            <li class="breadcrumb-item active">About Us</li>
+            </ol>
         <div class="row row-header">
             <div class="col-12">
                <h3>About Us</h3>
