--- a/index.html
+++ b/index.html
@@ -14,7 +14,27 @@
 </head>
 
 <body>
-
+    <nav class="navbar navbar-dark navbar-expand-sm bg-primary fixed-top">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+        <a class="navbar-brand" href="#">Intellicial AI</a>
+        <div class="collapse navbar-collapse" id="Navbar">
+            <ul class="navbar-nav mr-auto"> ... </ul>
+            </div>
+        <ul class="navbar-nav mr-auto">
+        <li class="nav-item active"><a class="nav-link"
+        href="#">Home</a></li>
+        <li class="nav-item"><a class="nav-link"
+        href="./aboutus.html">About</a></li>
+        <li class="nav-item"><a class="nav-link"
+        href="#">Projects</a></li>
+        <li class="nav-item"><a class="nav-link"
+        href="#">Contact</a></li>
+        </ul>
+        </div>
+        </nav>
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
