--- a/aboutus.html
+++ b/aboutus.html
@@ -19,13 +19,17 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-           <a class="navbar-brand" href="#">Intellicial AI</a> 
+            <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" width="45px" alt="logo" /></a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span>Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span>About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span>Projects</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span>Contact</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="./index.html"><span
+                                class="fa fa-home fa-lg"></span>Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span
+                                class="fa fa-info fa-lg"></span>About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span>Projects</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="./contactus.html"><span
+                                class="fa fa-address-card fa-lg"></span>Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -39,7 +43,8 @@
                     <p>Our work to create safe and beneficial AI requires a deep understanding of the potential risks
                         and benefits, as well as careful consideration of the impact.</p>
                 </div>
-                <div class="col-12 col-sm-6">
+                <div class="col-12 col-sm align-self-center">
+                    <img src="img/logo.png" width="120px" alt="logo" />
 
                 </div>
             </div>
@@ -72,6 +77,25 @@
                     use by a wide-range of customers.</p>
             </div>
             <div class="col-12 col-sm-6">
+                <div class="col-12 col-sm-6">
+                    <div class="card">
+                        <h3 class="card-header bg-primary text-white">Facts At a
+                            Glance</h3>
+                        <div class="card-body">
+                            <dl class="row">
+                                <dt class="col-6">Started</dt>
+                                <dd class="col-6">30 Aug 2021</dd>
+                                <dt class="col-6">Major Stake Holder</dt>
+                                <dd class="col-6">Websitera House</dd>
+                                <dt class="col-6">Last Year's Turnover</dt>
+                                <dd class="col-6">$1,250,375</dd>
+                                <dt class="col-6">Employees</dt>
+                                <dd class="col-6">40</dd>
+                            </dl>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
 
@@ -109,6 +133,65 @@
         </div>
 
     </div>
+    <div class="row row-content">
+        <div class="col-12 col-sm-9">
+            <h2>Facts&amp; Figures</h2>
+            <div class="table-responsive">
+                <table class="table table-striped">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th>&nbsp:</th>
+                            <th>2022</th>
+                            <th>2021</th>
+                            <th>2020</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th>Employess</th>
+                            <td>15</td>
+                            <td>30</td>
+                            <td>40</td>
+                        </tr>
+                        <tr>
+                            <th>Projects Served</th>
+                            <td>150</td>
+                            <td>450</td>
+                            <td>900</td>
+                        </tr>
+                        <tr>
+                            <th>Special Events</th>
+                            <td>3</td>
+                            <td>20</td>
+                            <td>45</td>
+                        </tr>
+                        <tr>
+                            <th>Annual Turnover</th>
+                            <td>$251,325</td>
+                            <td>$1,250,375</td>
+                            <td>~$3,000,000</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+        </div>
+        <div class="col-12">
+            <div class="col-12">
+                <div class="card card-body bg-light">
+                    <blockquote class="blockquote">
+                        <p class="mb-0">A year spent in artificial intelligence is
+                            enough to make one believe in God.</p>
+                        <footer class="blockquote-footer">
+                            Aalok Kumar, <cite title="Source Title">Chief Executing
+                                Officer, WHPL, India, 2022</cite>
+                        </footer>
+                    </blockquote>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <footer class="footer">
         <div class="container">
@@ -130,16 +213,22 @@
                         France<br>
                         <i class="fa fa-phone fa-lg"></i>: +33 1234 5678 20<br>
                         <i class="fa fa-fax fa-lg"></i>: +33 8765 4321 20<br>
-                        <i class="fa fa-envelope fa-lg"></i>: <a href="mailto:info@intelicial.net">info@intelicial.net</a>
+                        <i class="fa fa-envelope fa-lg"></i>: <a
+                            href="mailto:info@intelicial.net">info@intelicial.net</a>
                     </address>
                 </div>
                 <div class="col-12 col-sm-4 align-self-center">
                     <div class="text-center">
-                        <a class="btn btn-social-icon btn-google"href="http://google.com/+"><i class="fa fa-google-plus"></i></a>
-                        <a class="btn btn-social-icon btn-facebook"href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
-                        <a class="btn btn-social-icon btn-linkedin"href="http://www.linkedin.com/in/"><i class="fa fa-linkedin"></i></a>
-                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-                        <a class="btn btn-social-icon btn-youtube"href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+                        <a class="btn btn-social-icon btn-google" href="http://google.com/+"><i
+                                class="fa fa-google-plus"></i></a>
+                        <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i
+                                class="fa fa-facebook"></i></a>
+                        <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i
+                                class="fa fa-linkedin"></i></a>
+                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i
+                                class="fa fa-twitter"></i></a>
+                        <a class="btn btn-social-icon btn-youtube" href="http://youtube.com/"><i
+                                class="fa fa-youtube"></i></a>
                         <a class="btn btn-social-icon btn-mailto" href="mailto:"><i class="fa fa-envelope-o"></i></a>
                     </div>
                 </div>
