--- a/contactus.html
+++ b/contactus.html
@@ -24,7 +24,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="#">Intellicial AI</a>
+            <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" width="45px" alt="logo"/></a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active"><a class="nav-link" href="./index.html"><span
@@ -47,7 +47,8 @@
                     <p>Our work to create safe and beneficial AI requires a deep understanding of the potential risks
                         and benefits, as well as careful consideration of the impact.</p>
                 </div>
-                <div class="col-12 col-sm">
+                <div class="col-12 col-sm align-self-center">
+                    <img src="img/logo.png" width="120px" alt="logo"/>
                 </div>
             </div>
         </div>
