--- a/index.html
+++ b/index.html
@@ -39,25 +39,28 @@
             </div>
         </div>
     </nav>
+
     <div id="loginModal" class="modal fade" role="dialog">
         <div class="modal-dialog modal-lg" role="content">
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">Login</h4>
-                    <button type="button" class="close" data-bs-dismiss="modal">&times;</button>
+                    <button type="button" class="btn-close" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <form>
-                        <div class="form-now">
-                            <div class="form-group col-sm-4">
-                                <label class="sr-only" for="inputEmail">Email address</label>
-                                <input type="email" class="form-control form-control-sm mr-1" id="inputEmail"
-                                    placeholder="Enter email">
-                            </div>
-                            <div class="form-group col-sm-4">
-                                <label class="sr-only" for="inputpassword">Password</label>
-                                <input type="password" class="form-control form-control-sm mr-1" id="inputpassword"
-                                    placeholder="Password">
+                        <div class="form-row">
+                            <div class="row">
+                                <div class="col">
+                                    <label class="sr-only" for="inputemail">Email address</label>
+                                    <input type="email" class="form-control 
+                                    form-control-sm mr-1" id="Email Address" placeholder="Enter email">
+                                </div>
+                                <div class="col">
+                                    <label class="sr-only" for="inputpass">Password</label>
+                                    <input type="password" class="form-control 
+                                    form-control-sm mr-1" id="Password" placeholder=" Enter Password">
+                                </div>
                             </div>
                             <div class="col-sm-auto">
                                 <div class="form-check">
@@ -65,17 +68,19 @@
                                     <label class="form-check-label">Remember me</label>
                                 </div>
                             </div>
+
                         </div>
                         <div class="form-row">
                             <button type="button" class="btn btn-secondary btn-sm ml-auto"
                                 data-bs-dismiss="modal">Cancel</button>
-                            <button type="Submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
+                            <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
     </div>
+
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -90,9 +95,10 @@
                 </div>
                 <div class="col-12 col-sm-3 align-self-center p-3">
                     <div class="d-grid gap-2">
-                        <a role="button" href="#reserve" class="btn btn-sm btn-warning" type="button"
-                            data-bs-toggle="tooltip" data-bs-placement="top" data-bs-html="true"
-                            title="call us at <br> <strong>+331234567890</strong>">Reserve a Project</a>
+
+                        <a role="button" class="btn btn-sm btn-warning" type="button" data-bs-toggle="modal"
+                            data-bs-target="#reserveModal">Reserve a Project</a>
+
                     </div>
 
                 </div>
@@ -102,8 +108,94 @@
 
 
 
+    <div class="row row-content">
+        <div class="col">
+            <div id="mycarousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item active">
+                        <img class="d-block img-fluid" src="img/autonomous_car.png" width="120px"
+                            alt="Autonomous Car" />
+                        <div class="carousel-caption d-none d-md-block">
+                            <h2 class="mt-0">Autonomous Car<span class="badge bg-danger">NEW</span><span
+                                    class="badge rounded-pill bg-secondary">$4.99</span></h2>
+                            <p class="d-none d-sm-block">It is a vehicle(car) capable of sensing its environment and
+                                operating without human involvement.
+                                human passenger is not required to take control of the vehicle at any time, nor is a
+                                human
+                                passenger
+                                required to be present in the vehicle at all.</p>
+                            <ol class="carousel-indicators">
+                                <li data-bs-target="#mycarousel" data-bs-slide-to="0" class="active"></li>
+                                <li data-bs-target="#mycarousel" data-bs-slide-to="1"></li>
+                                <li data-bs-target="#mycarousel" data-bs-slide-to="2"></li>
+                            </ol>
+                            <button class="carousel-control-prev" type=”button” data-bs-target="#mycarousel"
+                                data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon"></span>
+                            </button>
+                            <button class="carousel-control-next" type=”button” data-bs-target="#mycarousel"
+                                data-bs-slide="next">
+                                <span class="carousel-control-next-icon"></span>
+                            </button>
 
 
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="img/humanoid.png" width="150px" alt="humanoid" />
+                        <div class="carousel-caption d-none d-md-block">
+                            <h3>Our Ongoing Research Projects</h3>
+                            <h2 class="mt-0">Open Humanoid<span class="badge bg-danger">HOT</span></h2>
+                            <p class="d-none d-sm-block">A chat bot which is capable of talking like humans and taking
+                                smart
+                                decisions based on different
+                                situations. Can performs actions like human.</p>
+                            <ol class="carousel-indicators">
+                                <li data-bs-target="#mycarousel" data-bs-slide-to="0" class="active"></li>
+                                <li data-bs-target="#mycarousel" data-bs-slide-to="1"></li>
+                                <li data-bs-target="#mycarousel" data-bs-slide-to="2"></li>
+                            </ol>
+                            <button class="carousel-control-prev" type=”button” data-bs-target="#mycarousel"
+                                data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon"></span>
+                            </button>
+                            <button class="carousel-control-next" type=”button” data-bs-target="#mycarousel"
+                                data-bs-slide="next">
+                                <span class="carousel-control-next-icon"></span>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="img/henlry.png" width="150px" alt="henlry" />
+                        <div class="carousel-caption d-none d-md-block">
+                            <h3>Meet our Developers</h3>
+                            <h2 class="mt-0">John Henlry</h2>
+                            <h4>Executive Project Manager</h4>
+                            <p class="d-none d-sm-block">Eleven years experience including management of complex
+                                technical
+                                projects, customer advocacy, team
+                                building and engineering. Worked across company divisions and geographies to deliver
+                                quality
+                                products to a world-wide market.</p>
+                            <ol class="carousel-indicators">
+                                <li data-bs-target="#mycarousel" data-bs-slide-to="0" class="active"></li>
+                                <li data-bs-target="#mycarousel" data-bs-slide-to="1"></li>
+                                <li data-bs-target="#mycarousel" data-bs-slide-to="2"></li>
+                            </ol>
+                            <button class="carousel-control-prev" type=”button” data-bs-target="#mycarousel"
+                                data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon"></span>
+                            </button>
+                            <button class="carousel-control-next" type=”button” data-bs-target="#mycarousel"
+                                data-bs-slide="next">
+                                <span class="carousel-control-next-icon"></span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="container">
         <div class="row row-content align-items-center">
@@ -118,7 +210,8 @@
                                 class="badge rounded-pill bg-secondary">$4.99</span></h2>
                         <p class="d-none d-sm-block">It is a vehicle(car) capable of sensing its environment and
                             operating without human involvement. A
-                            human passenger is not required to take control of the vehicle at any time, nor is a human
+                            human passenger is not required to take control of the vehicle at any time, nor is a
+                            human
                             passenger
                             required to be present in the vehicle at all.</p>
                     </div>
@@ -135,7 +228,8 @@
                     <div class="media-body align-self-center px-3">
 
                         <h2 class="mt-0">Open Humanoid<span class="badge bg-danger">HOT</span></h2>
-                        <p class="d-none d-sm-block">A chat bot which is capable of talking like humans and taking smart
+                        <p class="d-none d-sm-block">A chat bot which is capable of talking like humans and taking
+                            smart
                             decisions based on different
                             situations. Can performs actions like human.</p>
                     </div>
@@ -149,24 +243,29 @@
             </div>
             <div class="col-12 col-sm-8">
                 <div class="media d-flex">
-                    <img class="img-thumbnail" src="img/henlry.png" width="100px" alt="Jhon henlry" />
+                    <img class="img-thumbnail" src="img/henlry.png" width="150px" alt="Jhon henlry" />
                     <div class="media-body align-self-center px-3">
                         <h2 class="mt-0">John Henlry</h2>
                         <h4>Executive Project Manager</h4>
-                        <p class="d-none d-sm-block">Eleven years experience including management of complex technical
+                        <p class="d-none d-sm-block">Eleven years experience including management of complex
+                            technical
                             projects, customer advocacy, team
-                            building and engineering. Worked across company divisions and geographies to deliver quality
+                            building and engineering. Worked across company divisions and geographies to deliver
+                            quality
                             products to a world-wide market.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container" id="reserve">
-        <div class="row row-header">
-            <div class="row-content col-12 col-md-8 offset-md-2">
-                <div class="card">
-                    <h3 class="card-header bg-warning text-white"><strong>Reserve a Project</strong></h3>
+    <div class="modal fade" id="reserveModal">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title"><strong>Reserve a Project</strong></h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="close"></button>
+                </div>
+                <div class="modal-body">
                     <form>
                         <div class="row form-group row-header py-3">
                             <label for="date" class="col-md-3 col-12 col-form-label">Number 0f Member</label>
@@ -198,6 +297,20 @@
                             </div>
                         </div>
                         <div class="row form-group row-header pb-3">
+                            <label for="section" class="col-md-3 col-12 col-form-label">Section</label>
+                            <div class="col-12 col-md-9">
+                                <div class="btn-group">
+                                    <input type="radio" class="btn-check" name="options-outlined" id="success-outlined"
+                                        autocomplete="off" checked>
+                                    <label class="btn btn-outline-success btn-sm"
+                                        for="success-outlined">Individual</label>
+                                    <input type="radio" class="btn-check" name="option-outlined" id="danger-outlined"
+                                        autocomplete="off">
+                                    <label class="btn btn-outline-danger btn-sm" for="danger-outlined">Team</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row form-group row-header pb-3">
                             <label for="date" class="col-md-3 col-12 col-form-label">Date and Time</label>
                             <div class="col-12 col-md-4">
                                 <input type="text" class="form-control" id="date" name="date" placeholder="Date">
@@ -208,7 +321,8 @@
                         </div>
                         <div class="form-goup row row-header pb-3">
                             <div class="col-12 offset-md-3 col-md-9">
-                                <button type="reserve" class="btn btn-primary">Reserve</button>
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                <button type="button" class="btn btn-primary">Reserve</button>
                             </div>
                         </div>
                     </form>
@@ -216,6 +330,7 @@
             </div>
         </div>
     </div>
+
     <footer class="footer">
         <div class="container">
             <div class="row justify-content-center">
@@ -266,12 +381,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('[data-bs-toggle="tooltip"]').tooltip();
-        });
 
-    </script>
 </body>
 
 </html>
