--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">Login</h4>
-                    <button type="button" class="btn-close" aria-label="Close"></button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <form>
@@ -107,90 +107,64 @@
     </header>
 
 
-
-    <div class="row row-content">
-        <div class="col">
-            <div id="mycarousel" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner" role="listbox">
-                    <div class="carousel-item active">
-                        <img class="d-block img-fluid" src="img/autonomous_car.png" width="120px"
-                            alt="Autonomous Car" />
-                        <div class="carousel-caption d-none d-md-block">
-                            <h2 class="mt-0">Autonomous Car<span class="badge bg-danger">NEW</span><span
-                                    class="badge rounded-pill bg-secondary">$4.99</span></h2>
-                            <p class="d-none d-sm-block">It is a vehicle(car) capable of sensing its environment and
-                                operating without human involvement.
-                                human passenger is not required to take control of the vehicle at any time, nor is a
-                                human
-                                passenger
-                                required to be present in the vehicle at all.</p>
-                            <ol class="carousel-indicators">
-                                <li data-bs-target="#mycarousel" data-bs-slide-to="0" class="active"></li>
-                                <li data-bs-target="#mycarousel" data-bs-slide-to="1"></li>
-                                <li data-bs-target="#mycarousel" data-bs-slide-to="2"></li>
-                            </ol>
-                            <button class="carousel-control-prev" type=”button” data-bs-target="#mycarousel"
-                                data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon"></span>
-                            </button>
-                            <button class="carousel-control-next" type=”button” data-bs-target="#mycarousel"
-                                data-bs-slide="next">
-                                <span class="carousel-control-next-icon"></span>
-                            </button>
-
-
+    <div class="container">
+        <div class="row row-content">
+            <div class="col">
+                <div id="mycarousel" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                            <img class="d-block img-fluid" src="img/autonomous_car.png" width="120px"
+                                alt="Autonomous Car" />
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2 class="mt-0">Autonomous Car<span class="badge bg-danger">NEW</span><span
+                                        class="badge rounded-pill bg-secondary">$4.99</span></h2>
+                                <p class="d-none d-sm-block">It is a vehicle(car) capable of sensing its environment and
+                                    operating without human involvement.
+                                    human passenger is not required to take control of the vehicle at any time, nor is a
+                                    human
+                                    passenger
+                                    required to be present in the vehicle at all.</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block img-fluid" src="img/humanoid.png" width="150px" alt="humanoid" />
-                        <div class="carousel-caption d-none d-md-block">
-                            <h3>Our Ongoing Research Projects</h3>
-                            <h2 class="mt-0">Open Humanoid<span class="badge bg-danger">HOT</span></h2>
-                            <p class="d-none d-sm-block">A chat bot which is capable of talking like humans and taking
-                                smart
-                                decisions based on different
-                                situations. Can performs actions like human.</p>
-                            <ol class="carousel-indicators">
-                                <li data-bs-target="#mycarousel" data-bs-slide-to="0" class="active"></li>
-                                <li data-bs-target="#mycarousel" data-bs-slide-to="1"></li>
-                                <li data-bs-target="#mycarousel" data-bs-slide-to="2"></li>
-                            </ol>
-                            <button class="carousel-control-prev" type=”button” data-bs-target="#mycarousel"
-                                data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon"></span>
-                            </button>
-                            <button class="carousel-control-next" type=”button” data-bs-target="#mycarousel"
-                                data-bs-slide="next">
-                                <span class="carousel-control-next-icon"></span>
-                            </button>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="img/humanoid.png" width="150px" alt="humanoid" />
+                            <div class="carousel-caption d-none d-md-block">
+                                <h3>Our Ongoing Research Projects</h3>
+                                <h2 class="mt-0">Open Humanoid<span class="badge bg-danger">HOT</span></h2>
+                                <p class="d-none d-sm-block">A chat bot which is capable of talking like humans and
+                                    taking
+                                    smart
+                                    decisions based on different
+                                    situations. Can performs actions like human.</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block img-fluid" src="img/henlry.png" width="150px" alt="henlry" />
-                        <div class="carousel-caption d-none d-md-block">
-                            <h3>Meet our Developers</h3>
-                            <h2 class="mt-0">John Henlry</h2>
-                            <h4>Executive Project Manager</h4>
-                            <p class="d-none d-sm-block">Eleven years experience including management of complex
-                                technical
-                                projects, customer advocacy, team
-                                building and engineering. Worked across company divisions and geographies to deliver
-                                quality
-                                products to a world-wide market.</p>
-                            <ol class="carousel-indicators">
-                                <li data-bs-target="#mycarousel" data-bs-slide-to="0" class="active"></li>
-                                <li data-bs-target="#mycarousel" data-bs-slide-to="1"></li>
-                                <li data-bs-target="#mycarousel" data-bs-slide-to="2"></li>
-                            </ol>
-                            <button class="carousel-control-prev" type=”button” data-bs-target="#mycarousel"
-                                data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon"></span>
-                            </button>
-                            <button class="carousel-control-next" type=”button” data-bs-target="#mycarousel"
-                                data-bs-slide="next">
-                                <span class="carousel-control-next-icon"></span>
-                            </button>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="img/henlry.png" width="150px" alt="henlry" />
+                            <div class="carousel-caption d-none d-md-block">
+                                <h3>Meet our Developers</h3>
+                                <h2 class="mt-0">John Henlry</h2>
+                                <h4>Executive Project Manager</h4>
+                                <p class="d-none d-sm-block">Eleven years experience including management of complex
+                                    technical
+                                    projects, customer advocacy, team
+                                    building and engineering. Worked across company divisions and geographies to deliver
+                                    quality
+                                    products to a world-wide market.</p>
+                            </div>
                         </div>
+                        <ol class="carousel-indicators">
+                            <li data-bs-target="#mycarousel" data-bs-slide-to="0" class="active"></li>
+                            <li data-bs-target="#mycarousel" data-bs-slide-to="1"></li>
+                            <li data-bs-target="#mycarousel" data-bs-slide-to="2"></li>
+                        </ol>
+                        <button class="carousel-control-prev" type=”button” data-bs-target="#mycarousel"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                        </button>
+                        <button class="carousel-control-next" type=”button” data-bs-target="#mycarousel"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -337,10 +311,10 @@
                 <div class="col-12 col-sm-4">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./aboutus.html">About</a></li>
                         <li><a href="#">Projects</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="./contactus.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-12 col-sm-4">
