--- a/aboutus.html
+++ b/aboutus.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <!-- build:css css/main.css -->
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <meta charset="utf-8">
@@ -9,6 +10,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <!-- endbuild -->
     <title>About Us | Intellicial AI - WHPL</title>
 
 </head>
@@ -443,9 +445,11 @@
             </div>
         </div>
     </footer>
+    <!-- build:js js/main.js -->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+     <!-- endbuild -->
 
 
 </body>
