--- a/contactus.html
+++ b/contactus.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-
+<!-- build:css css/main.css -->
     <title>Intelicial AI: About Us</title>
     <!-- Required meta tags always come first -->
 
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <link href="style.css" rel="stylesheet">
+     <!-- endbuild -->
 </head>
 
 <body>
@@ -339,10 +340,11 @@
         </div>
     </footer>
 
-    <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
+    <!-- build:js js/main.js -->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+     <!-- endbuild -->
 </body>
 
 </html>
